--- a/html/aula02/style.css
+++ b/html/aula02/style.css
@@ -1,8 +1,13 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
 body{
     background-color: black;
     color: white;
 }
 
-strong{
+strong.titulo-destaque{
     color: #22d4fd;
 }
