--- a/html/aula02/style.css
+++ b/html/aula02/style.css
@@ -44,19 +44,31 @@ strong.titulo-destaque{
 
 .apresentacao__links{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    gap: 10px;
+}
+
+.apresentacao__links__subtitulo{
+    font-family: 'Krona One', sans-serif;
+    font-weight: 400;
+    font-size: 24px;
 }
 
 .apresentacao__links__link{
-    background-color: #22d4fd;
-    width: 280px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+    border: 2px solid #22d4fd;
+    width: 378px;
     padding: 21.5px 0px;
-    border-radius: 16px;
+    border-radius: 8px;
     font-family: 'Montserrat', sans-serif;
     font-size: 24px;
     font-weight: 600;
     text-decoration: none;
-    color: black;
+    color: white;
     text-align: center;
 }
