--- a/html/aula02/style.css
+++ b/html/aula02/style.css
@@ -1,74 +1,105 @@
-@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Krona+One&family=Passion+One:wght@400;700;900&family=Sriracha&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
-*{
-    margin: 0px;
-    padding: 0px;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-body{
-    height: 100vh;
-    box-sizing: border-box;
-    background-color: black;
-    color: white;
+body {
+  /* height: 100vh; */
+  box-sizing: border-box;
+  background-color: black;
+  color: white;
 }
 
-strong.titulo-destaque{
-    color: #22d4fd;
+.cabecalho {
+  padding: 2% 0% 0% 15%;
 }
 
-.apresentacao{
-    margin: 10% 20%;
+.cabecalho__menu{
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    gap: 80px;
 }
 
-.apresentacao__conteudo{
-    width: 615px;
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
+.cabecalho__menu__link {
+  font-family: "Montserrat", sans-serif;
+  font-size: 24px;
+  font-weight: 600;
+  color: #22d4fd;
+  text-decoration: none;
 }
 
-.apresentacao__conteudo__titulo{
-    font-size: 36px;
-    font-family: 'Krona One', sans-serif;
-    font-weight: normal;
+.apresentacao {
+  padding: 4.45% 15%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.apresentacao__conteudo__texto{
-    font-size: 24px;
-    font-family: 'Montserrat', sans-serif;
+.apresentacao__conteudo {
+  width: 615px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
 }
 
-.apresentacao__links{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    gap: 10px;
+.apresentacao__conteudo__titulo {
+  font-size: 36px;
+  font-family: "Krona One", sans-serif;
+  font-weight: normal;
 }
 
-.apresentacao__links__subtitulo{
-    font-family: 'Krona One', sans-serif;
-    font-weight: 400;
-    font-size: 24px;
+strong.titulo-destaque {
+  color: #22d4fd;
 }
 
-.apresentacao__links__link{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 16px;
-    border: 2px solid #22d4fd;
-    width: 378px;
-    padding: 21.5px 0px;
-    border-radius: 8px;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 24px;
-    font-weight: 600;
-    text-decoration: none;
-    color: white;
-    text-align: center;
+.apresentacao__conteudo__texto {
+  font-size: 24px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.apresentacao__links {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.apresentacao__links__subtitulo {
+  font-family: "Krona One", sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+}
+
+.apresentacao__links__link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+  border: 2px solid #22d4fd;
+  width: 378px;
+  padding: 21.5px 0px;
+  border-radius: 8px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 24px;
+  font-weight: 600;
+  text-decoration: none;
+  color: white;
+  text-align: center;
+}
+
+.apresentacao__links__link:hover {
+  background-color: #272727;
+}
+
+.rodape {
+  padding: 24px;
+  color: black;
+  background-color: #22d4fd;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-size: 24px;
+  font-weight: 400;
 }
