--- a/html/aula02/styles/style.css
+++ b/html/aula02/styles/style.css
@@ -33,7 +33,7 @@ body {
 
 .cabecalho__menu__link {
   font-family: var(--fonte-secundaria);
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 600;
   color: var(--cor-terciaria);
   text-decoration: none;
@@ -47,14 +47,14 @@ body {
 }
 
 .apresentacao__conteudo {
-  width: 615px;
+  width: 50%;
   display: flex;
   flex-direction: column;
   gap: 40px;
 }
 
 .apresentacao__conteudo__titulo {
-  font-size: 36px;
+  font-size: 2.25rem;
   font-family: var(--fonte-primaria);
   font-weight: normal;
 }
@@ -64,7 +64,7 @@ strong.titulo-destaque {
 }
 
 .apresentacao__conteudo__texto {
-  font-size: 24px;
+  font-size: 1.5rem;
   font-family: var(--fonte-secundaria);
 }
 
@@ -79,20 +79,20 @@ strong.titulo-destaque {
 .apresentacao__links__subtitulo {
   font-family: var(--fonte-primaria);
   font-weight: 400;
-  font-size: 24px;
+  font-size: 1.5rem;
 }
 
-.apresentacao__links__link {
+.apresentacao__links__navegacao {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 16px;
   border: 2px solid var(--cor-terciaria);
-  width: 378px;
+  width: 50%;
   padding: 21.5px 0px;
   border-radius: 8px;
   font-family: var(--fonte-secundaria);
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 600;
   text-decoration: none;
   color: var(--cor-secundaria);
@@ -103,12 +103,16 @@ strong.titulo-destaque {
   background-color: var(--cor-hover);
 }
 
+.apresentacao__imagem{
+  width: 50%;
+}
+
 .rodape {
   padding: 24px;
   color: var(--cor-primaria);
   background-color: var(--cor-terciaria);
   text-align: center;
   font-family: var(--fonte-secundaria);
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 400;
 }
